Fri May 27 20:26:33 2005  Emre Turkay  <turkaye@dre.vanderbilt.edu>

        * CCF/CCF/CCF.sln:
        * CCF/Example/Example.sln:
        * CIDLC/CIDLC.sln:
        * CCF/CCF/CIDL/CIDL.vcproj:
        * CCF/CCF/CodeGenerationKit/CodeGenerationKit.vcproj:
        * CCF/CCF/CompilerElements/CompilerElements.vcproj:
        * CCF/CCF/IDL2/IDL2.vcproj:
        * CCF/CCF/IDL3/IDL3.vcproj:
        * CCF/Example/CIDL/LocalExecutorMapping/LocalExecutorMapping.vcproj:
        * CCF/Example/CodeGenerationKit/Indentation/IDL/IDL.vcproj:
        * CIDLC/CIDLC.vcproj:
				
          Deleted MSVC solution and project files, these are generated by the 
          mwc.

Fri May 27 13:41:20 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Port_Activator_T.cpp:
	* DAnCE/ciao/Port_Activator_T.h:
	* DAnCE/ciao/Servant_Activator.cpp:
	* DAnCE/ciao/Servant_Impl_Base.cpp:

	Added support for deactivating facets and event consumers
	when a component is getting deactivated. This fixes
        couple of memory leaks in the DAnCE deployment scenarios.


Thu May 26 22:55:26 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Servant_Impl_Base.cpp:

	  Added code to deactivate facets when component
	  is getting removed.

Thu May 26 20:41:04 2005  Jaiganesh B  <jai@dre.vanderbilt.edu>

	* DAnCE/ciao/Home_Servant_Impl_T.cpp:
	* DAnCE/ciao/Servant_Impl_Base.cpp:
	* DAnCE/ciao/Servant_Impl_T.cpp:
	* DAnCE/ciao/Servant_Impl_T.h:

	Added support for the component servants to inherit
	from RefCountServantBase, to allow freeing up of
	servants in a more standard and effective manner.

	Added support functions in Servant_Impl_T class to
	clean up the component executor memory.

	Added support functions in Home_Servant_Impl_T and
	Servant_Impl_Base classes to uninstall components
	by executing operations like ccm_remove () in the
	right order.

	Finally fixed couple of memory leaks with respect
	to cleaning up component servants and component
	executors.